# forge

./: .gitignore  CLAUDE.md  CLAUDE_CODE_PARITY_REPORT.md  LICENSE  README.md  pyproject.toml
scripts/: setup_db.py
src/forge/: __init__.py  __main__.py  cli.py  config.py  log.py  mcp_server.py
tests/: conftest.py
tests/e2e/: test_cli.py
tests/integration/: test_agent_tools_integration.py  test_circuit_breaker_integration.py  test_cloud_recovery.py  test_context_integration.py  test_features_integration.py  test_hooks_integration.py  test_loop.py  test_mcp_config_integration.py  test_multimodal_integration.py  test_plan_think.py  test_status_integration.py  test_web_tools.py  test_worktree_integration.py
tests/manual/: conftest.py  test_diverse_prompts.py  test_trace_prompts.py  test_verify_gaps.py
tests/unit/: test_anthropic_config.py  test_auto_index.py  test_checkpoints.py  test_chunker.py  test_circuit_breaker.py  test_circuit_breaker_diagnostic.py  test_cloud_command.py  test_config.py  test_config_sandbox.py  test_context.py  test_context_extraction.py  test_critique_hooks.py  test_database_rag.py  test_edit_utils.py  test_embeddings.py  test_escalation.py  test_evidence_planning.py  test_executor.py  test_fork_history.py  test_gemini.py  test_gemini_config.py  test_hooks.py  test_hooks_feedback.py  test_impact.py  test_indexer.py  test_mcp_config.py  test_mcp_server.py  test_memory.py  test_memory_pruning.py  test_migrations.py  test_permissions.py  test_permissions_rules.py  test_project.py  test_render.py  test_render_events.py  test_retriever.py  (+13 more)
(+70 files in other folders)
